--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   <div id="modalBackdrop" class="modal-backdrop" hidden>
     <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
       <div class="modal-header">
-        <h2 id="modalTitle" class="modal-title">Заглавие</h2>
+        <h2 id="modalTitle" class="modal-title"></h2>
+
         <button id="closeBtn" class="close-btn" type="button" aria-label="Затвори">✕</button>
       </div>
 
