Update map point labels for clarity and correct punctuation

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- Лява колона с точки -->
     <div class="left-points" aria-label="Точки">
       <button class="map-point" data-id="1" aria-haspopup="dialog" title="">
-        <span class="dot"></span><span class="label">Точка 1</span>
+        <span class="dot"></span><span class="label">Любовта като солидарност</span>
       </button>
 
       <button class="map-point" data-id="2" aria-haspopup="dialog" title="Точка 2">
-        <span class="dot"></span><span class="label">Точка 2</span>
+        <span class="dot"></span><span class="label">Когато любовта боли</span>
       </button>
 
       <button class="map-point" data-id="3" aria-haspopup="dialog" title="Когато любовта липсва">
@@ -28,11 +28,11 @@
       </button>
 
       <button class="map-point" data-id="4" aria-haspopup="dialog" title="Точка 4">
-        <span class="dot"></span><span class="label">Точка 4</span>
+        <span class="dot"></span><span class="label">Уважение към различието</span>
       </button>
 
       <button class="map-point" data-id="5" aria-haspopup="dialog" title="Точка 5">
-        <span class="dot"></span><span class="label">Точка 5</span>
+        <span class="dot"></span><span class="label">Европа, която избираме</span>
       </button>
     </div>
   </main>
